--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin": "^1.0.1",
+    "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
     "prettier": "^3.4.2",
     "vite": "^5.4.2"
